# toml-fmt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  codecov.yml  ignore-words.txt  pyproject.toml  tox.toml
.github/: dependabot.yaml  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: pyproject-fmt-bug.yml  pyproject-fmt-feature.yml  tox-toml-fmt-bug.yml  tox-toml-fmt-feature.yml
.github/workflows/: _build.yaml  common.yaml  pyproject_fmt_build.yaml  pyproject_fmt_test.yaml  toml_fmt_common_build.yaml  toml_fmt_common_test.yaml  tox_toml_fmt_build.yaml  tox_toml_fmt_test.yaml  update_dependencies.yaml
common/: Cargo.toml  README.md
common/src/: array.rs  create.rs  disabled.rs  format_options.rs  lib.rs  pep508.rs  string.rs  table.rs  util.rs
common/src/pep508/: marker.rs  requirement.rs  version_op.rs
common/src/pep508/version_op/: operator.rs  version.rs
common/src/tests/: array_tests.rs  create_tests.rs  disabled_tests.rs  mod.rs  pep508_tests.rs  pep508_tests.rs.orig  string_tests.rs  table_tests.rs  util_tests.rs
pyproject-fmt/: .gitignore  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  Cargo.toml  README.md  README.rst  build.rs  build_backend.py  pyproject.toml  tox.toml
pyproject-fmt/.github/workflows/: check.yaml
pyproject-fmt/docs/: conf.py  configuration.rst  formatting.rst  index.rst
pyproject-fmt/rust/src/: autopep8.rs  bandit.rs  black.rs  build_system.rs  bumpversion.rs  check_manifest.rs  cibuildwheel.rs  codespell.rs  commitizen.rs  coverage.rs  dependency_groups.rs  deptry.rs  djlint.rs  docformatter.rs  global.rs  hatch.rs  interrogate.rs  isort.rs  main.rs  maturin.rs  mypy.rs  pdm.rs  pixi.rs  poetry.rs  project.rs  pylint.rs  pyrefly.rs  pyright.rs  pytest.rs  ruff.rs  scikit_build.rs  semantic_release.rs  setuptools.rs  towncrier.rs  tox.rs  ty.rs  uv.rs  vulture.rs  yapf.rs
pyproject-fmt/rust/src/data/: ruff-21.expected.toml  ruff-21.start.toml  ruff-order.expected.toml  ruff-order.start.toml
pyproject-fmt/rust/src/tests/: autopep8_tests.rs  bandit_tests.rs  black_tests.rs  build_systems_tests.rs  bumpversion_tests.rs  check_manifest_tests.rs  cibuildwheel_tests.rs  codespell_tests.rs  commitizen_tests.rs  coverage_tests.rs  dependency_groups_tests.rs  deptry_tests.rs  disabled_tests.rs  djlint_tests.rs  docformatter_tests.rs  global_tests.rs  hatch_tests.rs  interrogate_tests.rs  isort_tests.rs  main_tests.rs  maturin_tests.rs  mod.rs  mypy_tests.rs  pdm_tests.rs  pixi_tests.rs  poetry_tests.rs  project_tests.rs  pylint_tests.rs  pyrefly_tests.rs  pyright_tests.rs  pytest_tests.rs  ruff_tests.rs  scikit_build_tests.rs  semantic_release_tests.rs  setuptools_tests.rs  towncrier_tests.rs  tox_tests.rs  ty_tests.rs  uv_tests.rs  vulture_tests.rs  (+1 more)
pyproject-fmt/rust/src/tests/data/: issue-217.toml  ruff-order.toml  uv-order.toml
pyproject-fmt/rust/src/tests/snapshots/: _pyproject_fmt__tests__main_tests__issue_217_full_pyproject_idempotent.snap  _pyproject_fmt__tests__project_tests__project_all_fields.snap  _pyproject_fmt__tests__ruff_tests__order_ruff.snap  _pyproject_fmt__tests__uv_tests__order_uv.snap
pyproject-fmt/src/pyproject_fmt/: __init__.py  __main__.py  _lib.pyi  cli.py
pyproject-fmt/tests/: test_build_backend.py  test_lib.py  test_main.py
tasks/: bundle_common.py  changelog.py  fmt_examples.py  generate_readme.py  sphinx_fmt_example.py
toml-fmt-common/: CHANGELOG.md  pyproject.toml  tox.toml
toml-fmt-common/src/toml_fmt_common/: __init__.py
toml-fmt-common/tests/: test_app.py
tox-toml-fmt/: .readthedocs.yaml  CHANGELOG.md  Cargo.toml  README.md  README.rst  build_backend.py  pyproject.toml  tox.toml  toxfile.py
tox-toml-fmt/docs/: conf.py  configuration.rst  formatting.rst  index.rst
tox-toml-fmt/rust/src/: global.rs  main.rs
tox-toml-fmt/rust/src/tests/: disabled_tests.rs  doc_examples_tests.rs  global_tests.rs  main_tests.rs  mod.rs
tox-toml-fmt/src/tox_toml_fmt/: __init__.py  __main__.py  _lib.pyi
tox-toml-fmt/tests/: test_build_backend.py  test_lib.py  test_main.py  test_pyproject_toml_fmt.py
