[workspace]
members = [
    "common",
    "pyproject-fmt",
    "tox-toml-fmt"
]
resolver = "2"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
tombi-parser = { git = "https://github.com/tombi-toml/tombi", tag = "v0.11.4" }
tombi-syntax = { git = "https://github.com/tombi-toml/tombi", tag = "v0.11.4" }
tombi-formatter = { git = "https://github.com/tombi-toml/tombi", tag = "v0.11.4" }
tombi-toml-text = { git = "https://github.com/tombi-toml/tombi", tag = "v0.11.4" }
tombi-config = { git = "https://github.com/tombi-toml/tombi", tag = "v0.11.4" }
tombi-schema-store = { git = "https://github.com/tombi-toml/tombi", tag = "v0.11.4" }

[workspace.lints.rust]
