[workspace]
members = [
    "common",
    "pyproject-fmt",
    "tox-toml-fmt"
]
resolver = "2"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
tombi-parser = { git = "https://github.com/tombi-toml/tombi", tag = "v1.1.3" }
tombi-syntax = { git = "https://github.com/tombi-toml/tombi", tag = "v1.1.3" }
tombi-formatter = { git = "https://github.com/tombi-toml/tombi", tag = "v1.1.3" }
tombi-toml-text = { git = "https://github.com/tombi-toml/tombi", tag = "v1.1.3" }
tombi-config = { git = "https://github.com/tombi-toml/tombi", tag = "v1.1.3" }
tombi-schema-store = { git = "https://github.com/tombi-toml/tombi", tag = "v1.1.3" }

[workspace.lints.rust]
