[package]
name = "common"
version = "1.0.0"
description = "Common code for formatting TOML files"
repository = "https://github.com/tox-dev/toml-fmt"
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
regex = { version = "1.11.1" }
taplo = "0.14.0"                          # formatter

[dev-dependencies]
rstest = "0.26.1" # parametrized tests
indoc = { version = "2.0.6" }   # dedented test cases for literal strings
