[package]
name = "common"
version = "1.0.0"
description = "Common code for formatting TOML files"
repository = "https://github.com/tox-dev/toml-fmt"
readme = "README.md"
license = "MIT"
edition = "2024"

[features]
test-util = ["dep:toml", "dep:tokio"]

[dependencies]
regex = { version = "1.12.3" }
# Tombi provides TOML parsing, syntax tree manipulation, and formatting
# Public APIs we use:
# - tombi_parser::parse - Parse TOML into syntax tree
# - tombi_syntax - Syntax node types and traversal
# - tombi_toml_text - String escape/unescape handling
# - tombi_formatter - TOML formatting
tombi-parser = { workspace = true }
tombi-syntax = { workspace = true }
tombi-formatter = { workspace = true }
tombi-toml-text = { workspace = true }
tombi-config = { workspace = true }
tombi-schema-store = { workspace = true }
toml = { version = "1.0.2", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
indoc = { version = "2.0.7" }   # dedented test cases for literal strings
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
insta = { version = "1.46.3", features = ["redactions"] } # snapshot testing
toml = "1.0.2"
