[package]
name = "pyproject-fmt"
version = "2.11.0"
description = "Format pyproject.toml files"
repository = "https://github.com/tox-dev/pyproject-fmt"
readme = "README.md"
license = "MIT"
edition = "2021"

[lib]
name = "_lib"
path = "rust/src/main.rs"
crate-type = ["cdylib"]

[dependencies]
common = {path = "../common" }
regex = { version = "1.11.1" }
pyo3 = { version = "0.26.0", features = ["abi3-py39"] } # integration with Python
lexical-sort = { version = "0.3.1" }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dev-dependencies]
rstest = "0.26.1" # parametrized tests
indoc = { version = "2.0.6" }   # dedented test cases for literal strings
