[build-system]
build-backend = "maturin"
requires = [
  "maturin>=1.11.5",
]

[project]
name = "pyproject-fmt"
description = "Format your pyproject.toml file"
readme = "README.md"
keywords = [
  "format",
  "pyproject",
]
license.file = "LICENSE.txt"
authors = [
  { name = "Bernat Gabor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "toml-fmt-common==1.1",
]
urls."Bug Tracker" = "https://github.com/tox-dev/toml-fmt/issues"
urls."Changelog" = "https://github.com/tox-dev/toml-fmt/blob/main/pyproject-fmt/CHANGELOG.md"
urls.Documentation = "https://pyproject-fmt.readthedocs.io/en/latest/"
urls."Source Code" = "https://github.com/tox-dev/toml-fmt/tree/main/pyproject-fmt"
scripts.pyproject-fmt = "pyproject_fmt.__main__:runner"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "fix" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [
  "covdefaults>=2.3",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
]
type = [
  "mypy==1.19.1",
  "types-cachetools>=6.2.0.20251022",
  "types-chardet>=5.0.4.6",
  { include-group = "test" },
]
docs = [
  "furo>=2025.12.19",
  "sphinx>=9.1",
  "sphinx-argparse-cli>=1.20.1",
  "sphinx-autodoc-typehints>=3.6.2",
  "sphinx-copybutton>=0.5.2",
  "sphinx-inline-tabs>=2025.12.21.14",
]
fix = [
  "pre-commit-uv>=4.2",
]
pkg-meta = [
  "check-wheel-contents>=0.6.3",
  "twine>=6.2",
  "uv>=0.9.28",
]

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
module-name = "pyproject_fmt._lib"
python-source = "src"
strip = true
include = [
  "rust-toolchain.toml",
]

[tool.cibuildwheel]
skip = [
  "pp*",
  "*musl*",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox/*/.venv/lib/*/site-packages",
  ".tox\\*\\.venv\\Lib\\site-packages",
  ".tox/*/lib/*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  "**/src",
  "**\\src",
]
report.fail_under = 100
run.parallel = true
run.plugins = [
  "covdefaults",
]

[tool.mypy]
show_error_codes = true
strict = true
