[package]
name = "tox-toml-fmt"
version = "1.9.3"
description = "Format tox.toml files"
repository = "https://github.com/tox-dev/tox-toml-fmt"
license = "MIT"
edition = "2021"

[lib]
name = "_tox_toml_fmt"
path = "rust/src/main.rs"
# `rlib` lets sibling crates (pyproject-fmt) import the global rules module so the tox
# handler for [tool.tox] in pyproject.toml shares one source of truth with tox.toml.
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../common" }
lexical-sort = { version = "0.3.1" }
pyo3 = { version = "0.29.0", features = ["generate-import-lib"] }
regex = { version = "1.13.0" }
tombi-parser = { workspace = true }
tombi-syntax = { workspace = true }
tombi-formatter = { workspace = true }
tombi-config = { workspace = true }
tombi-schema-store = { workspace = true }
tokio = { version = "1", features = ["rt"] }

[features]
extension-module = ["pyo3/extension-module"]
# `abi3` can be disabled to produce per-version wheels (needed for free-threaded 3.15t until
# CPython lands PEP 803 abi3t loader: https://github.com/python/cpython/issues/146636).
abi3 = ["pyo3/abi3-py310"]
default = ["extension-module", "abi3"]

[dev-dependencies]
common = { path = "../common", features = ["test-util"] }
indoc = { version = "2.0.7" }   # dedented test cases for literal strings
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
insta = { version = "1.48.0", features = ["redactions"] } # snapshot testing
pyo3 = { version = "0.29.0", features = ["auto-initialize"] }
