[build-system]
build-backend = "maturin"
requires = [
  "maturin>=1.8.4",
]

[project]
name = "tox-toml-fmt"
description = "Format your pyproject.toml file"
readme = "README.md"
keywords = [
  "format",
  "pyproject",
]
license.file = "LICENSE.txt"
authors = [
  { name = "Bernat Gabor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "toml-fmt-common==1.0.1",
]
urls."Bug Tracker" = "https://github.com/tox-dev/toml-fmt/issues"
urls."Changelog" = "https://github.com/tox-dev/toml-fmt/blob/main/tox-toml-fmt/CHANGELOG.md"
urls.Documentation = "https://github.com/tox-dev/toml-fmt/"
urls."Source Code" = "https://github.com/tox-dev/toml-fmt"
scripts.tox-toml-fmt = "tox_toml_fmt.__main__:runner"

[dependency-groups]
dev = [
  { include-group = "docs" },
  { include-group = "fix" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [
  "covdefaults>=2.3",
  "pytest>=8.3.5",
  "pytest-cov>=6.1.1",
  "pytest-mock>=3.14",
]
type = [
  "mypy==1.15",
  "types-cachetools>=5.5.0.20240820",
  "types-chardet>=5.0.4.6",
  { include-group = "test" },
]
docs = [
  "furo>=2024.8.6",
  "sphinx>=8.2.3",
  "sphinx-argparse-cli>=1.19",
  "sphinx-autodoc-typehints>=3.2",
  "sphinx-copybutton>=0.5.2",
  "sphinx-inline-tabs>=2023.4.21",
]
fix = [
  "pre-commit-uv>=4.1.4",
]
pkg-meta = [
  "check-wheel-contents>=0.6.2",
  "twine>=6.1",
  "uv>=0.7.3",
]

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
module-name = "tox_toml_fmt._lib"
python-source = "src"
strip = true
include = [
  "rust-toolchain.toml",
]

[tool.cibuildwheel]
skip = [
  "pp*",
  "*musl*",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest]
ini_options.testpaths = [
  "tests",
]

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox/*/.venv/lib/*/site-packages",
  ".tox\\*\\.venv\\Lib\\site-packages",
  ".tox/*/lib/*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  "**/src",
  "**\\src",
]
report.fail_under = 100
run.parallel = true
run.plugins = [
  "covdefaults",
]

[tool.mypy]
show_error_codes = true
strict = true
