[build-system]
build-backend = "maturin"
requires = [
  "maturin>=1.11.5",
]

[project]
name = "tox-toml-fmt"
description = "Format your pyproject.toml file"
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [
  "format",
  "pyproject",
]
license.file = "LICENSE.txt"
authors = [
  { name = "Bernat Gabor", email = "gaborjbernat@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "toml-fmt-common",
]
urls."Bug Tracker" = "https://github.com/tox-dev/toml-fmt/issues"
urls."Changelog" = "https://github.com/tox-dev/toml-fmt/blob/main/tox-toml-fmt/CHANGELOG.md"
urls.Documentation = "https://tox-toml-fmt.readthedocs.io/en/latest/"
urls."Source Code" = "https://github.com/tox-dev/toml-fmt/tree/main/tox-toml-fmt"
scripts.tox-toml-fmt = "tox_toml_fmt.__main__:runner"

[dependency-groups]
dev = [
  { include-group = "fix" },
  { include-group = "test" },
  { include-group = "type" },
]
test = [
  "covdefaults>=2.3",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "pytest-mock>=3.15.1",
]
type = [
  "mypy==1.19.1",
  "types-cachetools>=6.2.0.20251022",
  "types-chardet>=5.0.4.6",
  { include-group = "test" },
]
docs = [
  "furo>=2025.12.19; python_version>='3.14'",
  "sphinx>=9.1; python_version>='3.14'",
  "sphinx-argparse-cli>=1.20.1; python_version>='3.14'",
  "sphinx-autodoc-typehints>=3.6.2; python_version>='3.14'",
  "sphinx-copybutton>=0.5.2; python_version>='3.14'",
  "sphinx-inline-tabs>=2025.12.21.14; python_version>='3.14'",
]
fix = [
  "pre-commit-uv>=4.2",
]
pkg-meta = [
  "check-wheel-contents>=0.6.3",
  "twine>=6.2",
  "uv>=0.9.28",
]

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
module-name = "tox_toml_fmt._lib"
python-source = "src"
strip = true
include = [
  "rust-toolchain.toml",
  "docs/",
  "CHANGELOG.md",
  "README.rst",
]
exclude = [
  "**/__pycache__/**",
  "**/*.pyc",
  "**/*.pyo",
]

[tool.cibuildwheel]
skip = [
  "pp*",
  "*musl*",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.coverage]
html.show_contexts = true
html.skip_covered = false
paths.source = [
  "src",
  ".tox/*/.venv/lib/*/site-packages",
  ".tox\\*\\.venv\\Lib\\site-packages",
  ".tox/*/lib/*/site-packages",
  ".tox\\*\\Lib\\site-packages",
  "**/src",
  "**\\src",
]
report.fail_under = 100
run.parallel = true
run.plugins = [
  "covdefaults",
]

[tool.mypy]
show_error_codes = true
strict = true
